[package]
name = "domains"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
color-eyre = "0.6.2"

opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.3.0"
opentelemetry-otlp = { version = "0.15.0", features = [
  "http-proto",
  "reqwest-rustls",
  "reqwest-client",
], default-features = false }
sentry = { version = "0.32.2", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { version = "0.32.2", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { version = "0.25.0", features = [
], git = "https://github.com/lambda-fairy/maud", rev = "320add87a12d8e5be115de9e0fe3f4b331512a4a" }
async-trait = "0.1.60"
axum = "0.7.4"
axum-macros = "0.4.0"
tower-http = { version = "0.5.2", features = ["trace"] }

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitoxide",
  "rustc",
] }
